# UV-C_system

./: README.md
firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
firmware/CodeB/: CMakeCache.txt  Makefile  UV.cbp  UV.layout  cmake_install.cmake  compile_commands.json  ldgen_libraries  project_description.json
firmware/CodeB/bootloader-prefix/tmp/: bootloader-cfgcmd.txt
firmware/CodeB/esp-idf/: Makefile  cmake_install.cmake  esp-idf.cbp
firmware/CodeB/esp-idf/app_trace/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/app_update/: Makefile
firmware/CodeB/esp-idf/asio/: Makefile
firmware/CodeB/esp-idf/bootloader/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/bootloader_support/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/bt/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/coap/: Makefile
firmware/CodeB/esp-idf/console/: Makefile
firmware/CodeB/esp-idf/cxx/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/driver/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/efuse/: Makefile
firmware/CodeB/esp-idf/esp-tls/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/esp32/: Makefile  cmake_install.cmake
firmware/CodeB/esp-idf/esp_eth/: Makefile
firmware/inc/: MAX44009.h  ML8511.h  my_JSON.h  my_http.h  my_i2c.h
firmware/libs/MAX44009/: MAX44009.c
firmware/libs/ML8511/: ML8511.c
firmware/libs/cJSON/: cJSON.c
firmware/libs/myHTTP/: my_http.c
firmware/libs/myI2C/: my_i2c.c
firmware/libs/myJSON/: my_JSON.c
firmware/libs/mySNTP/: my_SNTP.c
firmware/main/: CMakeLists.txt  main.c
(+81 files in other folders)
